<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_calculator">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="add">+</string>
    <string name="subtract">-</string>
    <string name="multiply">x</string>
    <string name="division">/</string>
    <string name="entry">=</string>
    <string name="AC">AC</string>
    <string name="point">.</string>
    <string name="power">^</string>
    <string name="func_sin">sin</string>
    <string name="func_cos">cos</string>
    <string name="func_tg">tg</string>
    <string name="func_ctg">ctg</string>
    <string name="func_pi">π</string>
    <string name="func_e">e</string>
    <string name="func_log">log</string>
    <string name="func_sqrt">√</string>
    <string name="func_fact">x!</string>
    <string name="func_op">op</string>
    <string name="ipn">ipn</string>

    <string name="title_activity_activity_two">ActivityTwo</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_two">two</string>
    <string name="action_settings">Settings</string>



</resources>