<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/zero" />

    <Button
        android:id="@+id/button2"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/point" />

    <Button
        android:id="@+id/button3"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button2"
        android:text="@string/entry" />

    <Button
        android:id="@+id/button4"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button3"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/button5"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:text="@string/one" />

    <Button
        android:id="@+id/button6"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/two"
        android:layout_alignTop="@+id/button7"
        android:layout_toLeftOf="@+id/button3" />

    <Button
        android:id="@+id/button7"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_above="@+id/button3"
        android:layout_toRightOf="@+id/button6"
        android:text="@string/three" />

    <Button
        android:id="@+id/button8"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/add"
        android:layout_alignTop="@+id/button25"
        android:layout_alignLeft="@+id/button4" />

    <Button
        android:id="@+id/button9"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_above="@+id/button5"
        android:layout_alignParentLeft="true"
        android:text="@string/four" />

    <Button
        android:id="@+id/button10"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/five"
        android:layout_below="@+id/button13"
        android:layout_alignLeft="@+id/button6" />

    <Button
        android:id="@+id/button11"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_above="@id/button7"
        android:layout_toRightOf="@id/button10"
        android:text="@string/six" />

    <Button
        android:id="@+id/button12"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignBaseline="@+id/button11"
        android:layout_alignBottom="@+id/button11"
        android:layout_toRightOf="@+id/button11"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/button13"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_above="@+id/button9"
        android:layout_alignParentLeft="true"
        android:text="@string/seven" />

    <Button
        android:id="@+id/button14"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/eight"
        android:layout_below="@+id/button23"
        android:layout_alignLeft="@+id/button6" />

    <Button
        android:id="@+id/button15"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignBaseline="@+id/button14"
        android:layout_alignBottom="@+id/button14"
        android:layout_toRightOf="@+id/button10"
        android:text="@string/nine" />

    <Button
        android:id="@+id/button16"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:layout_alignBaseline="@+id/button15"
        android:layout_alignBottom="@+id/button15"
        android:layout_toRightOf="@+id/button11"
        android:text="@string/division" />

    <Button
        android:id="@+id/button17"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/AC"
        android:layout_alignTop="@+id/button24"
        android:layout_toLeftOf="@+id/button16" />

    <Button
        android:id="@+id/button18"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/power"
        android:layout_above="@+id/button26"
        android:layout_toRightOf="@+id/button16" />

    <Button
        android:id="@+id/button19"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_sin"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button27"/>

    <Button
        android:id="@+id/button20"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_cos"
        android:layout_above="@+id/button19"
        android:layout_toRightOf="@+id/button25"/>

    <Button
        android:id="@+id/button21"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_tg"
        android:layout_above="@+id/button20"
        android:layout_toRightOf="@+id/button26" />

    <Button
        android:id="@+id/button22"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_ctg"
        android:layout_above="@+id/button21"
        android:layout_toRightOf="@+id/button18" />

    <Button
        android:id="@+id/button23"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_pi"
        android:layout_above="@+id/button13"
        android:layout_alignParentLeft="true" />

    <Button
        android:id="@+id/button24"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/func_e"
        android:layout_alignTop="@+id/button23"
        android:layout_toLeftOf="@+id/button15" />

    <Button
        android:id="@+id/button25"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_log"
        android:layout_above="@+id/button27"
        android:layout_toRightOf="@+id/button8"  />

    <Button
        android:id="@+id/button26"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_sqrt"
        android:layout_above="@+id/button25"
        android:layout_toRightOf="@+id/button12" />

    <Button
        android:id="@+id/button27"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:text="@string/func_fact"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button4" />

    <Button
        android:id="@+id/button28"
        android:layout_width="102dp"
        android:layout_height="30dp"
        android:text="@string/func_op"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/button22" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="30dp"
        android:layout_height="80dp"
        android:text="@string/zero"
        android:textSize="32sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:background="@android:color/darker_gray"
        android:focusable="false"
        android:gravity="center_vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="30dp"
        android:layout_height="80dp"
        android:textColor="#fafafa"
        android:layout_above="@+id/button23"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_alignParentRight="true" />

</RelativeLayout>